<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
        
        <RelativeLayout 
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
        
	        <CheckBox 
	            android:id="@+id/CkWithUii_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/ckWithUii"/>
	        <Button 
	            android:id="@+id/BtUii_Lock"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:text="@string/btUii" />
	    </RelativeLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvTagUii_Lock" />
	        
	        <EditText 
	            android:id="@+id/EtTagUii_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvAccessPwd" />
	        
	        <EditText 
	            android:id="@+id/EtAccessPwd_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvKill_Lock" />
	        <Spinner 
	            android:id="@+id/SpinnerKillPwd_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/arrayLock" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvAccess_Lock" />
	        <Spinner 
	            android:id="@+id/SpinnerAccessPwd_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/arrayLock" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvUII_Lock" />
	        <Spinner 
	            android:id="@+id/SpinnerUII_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/arrayLock" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvTID_Lock" />
	        <Spinner 
	            android:id="@+id/SpinnerTID_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/arrayLock" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvUSER_Lock" />
	        <Spinner 
	            android:id="@+id/SpinnerUSER_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:entries="@array/arrayLock" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView 
	            android:layout_width="90dip"
	            android:layout_height="wrap_content"
	            android:text="@string/tvLockCode_Lock" />
	        <EditText 
	            android:id="@+id/EtLockCode_Lock"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="" />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <Button 
	            android:id="@+id/BtCreateCode"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/btCreateCode"
	            android:layout_weight="1" />
	        <Button 
	            android:id="@+id/BtLock"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/btLock"
	            android:layout_weight="1" />
	    </LinearLayout>
	    
    </LinearLayout>
</ScrollView>